# VIO_Tutotial_Course

./: README.md
1.概述与课程介绍/code/: CMakeLists.txt  main.cpp
6.视觉前端/course6_hw/: CMakeLists.txt  triangulate.cpp
7.VINS系统构建/vins_sys_code/vins_sys_code/: CMakeLists.txt  my.txt
7.VINS系统构建/vins_sys_code/vins_sys_code/config/: euroc_config.yaml  myslam_config.yaml
7.VINS系统构建/vins_sys_code/vins_sys_code/data/: image_filename.txt
7.VINS系统构建/vins_sys_code/vins_sys_code/include/: System.h  estimator.h  feature_manager.h  parameters.h
7.VINS系统构建/vins_sys_code/vins_sys_code/include/backend/: backend.h  edge.h  edge_imu.h  edge_prior.h  edge_reprojection.h  eigen_types.h  imu_integration.h  loss_function.h  problem.h  vertex.h  vertex_inverse_depth.h  vertex_point_xyz.h  vertex_pose.h
7.VINS系统构建/vins_sys_code/vins_sys_code/include/factor/: integration_base.h
7.VINS系统构建/vins_sys_code/vins_sys_code/include/initial/: initial_alignment.h  initial_ex_rotation.h  initial_sfm.h  solve_5pts.h
7.VINS系统构建/vins_sys_code/vins_sys_code/src/: System.cpp  estimator.cpp  feature_manager.cpp  parameters.cpp
7.VINS系统构建/vins_sys_code/vins_sys_code/src/backend/: edge.cpp  edge_imu.cpp  edge_prior.cpp  loss_function.cpp  problem.cpp
7.VINS系统构建/vins_sys_code/vins_sys_code/src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp  initial_sfm.cpp  solve_5pts.cpp
7.VINS系统构建/vins_sys_code/vins_sys_code/test/: CurveFitting.cpp  run_euroc.cpp  run_myslam.cpp
7.VINS系统构建/vins_sys_code/vio_data_simulation-master/main/: gener_alldata.cpp
7.VINS系统构建/vins_sys_code/vio_data_simulation-master/python_tool/: draw_points.py  draw_trajcory.py
7.VINS系统构建/vins_sys_code/vio_data_simulation-master/src/: imu.cpp  utilities.cpp  utilities.h
